--- a/src/main/resources/static/refugee.html
+++ b/src/main/resources/static/refugee.html
@@ -6,7 +6,8 @@
     <title>Особистий кабінет біженця</title>
     <link rel="stylesheet" href="/templates/refugees.css">
     <link rel="stylesheet" href="/templates/map.css">
-
+    <link rel="stylesheet" href="/templates/chat.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -86,7 +87,7 @@
         <h2>Подати запит на допомогу</h2>
         <form id="request-form">
             <label for="request-type">Тип допомоги:</label>
-            <select id="request-type" name="request-type" >
+            <select id="request-type" name="request-type">
                 <option value="" disabled selected>Виберіть тип допомоги</option>
                 <option value="housing">Житло</option>
                 <option value="medical">Медична допомога</option>
@@ -98,12 +99,12 @@
             </select>
 
             <label for="request-description">Опис ситуації:</label>
-            <textarea id="request-description" name="request-description" rows="4" ></textarea>
+            <textarea id="request-description" name="request-description" rows="4"></textarea>
 
             <!-- Додаткові поля для Житла -->
             <div id="housing-fields" class="additional-fields">
                 <label for="family-members">Кількість членів сім'ї:</label>
-                <input type="number" id="family-members" name="family-members" min="1" >
+                <input type="number" id="family-members" name="family-members" min="1">
 
                 <label for="special-needs">Особливі потреби (якщо є):</label>
                 <textarea id="special-needs" name="special-needs" rows="2"></textarea>
@@ -112,19 +113,19 @@
             <!-- Додаткові поля для Медичної допомоги -->
             <div id="medical-fields" class="additional-fields">
                 <label for="medical-condition">Опис хронічної хвороби:</label>
-                <textarea id="medical-condition" name="medical-condition" rows="3" ></textarea>
+                <textarea id="medical-condition" name="medical-condition" rows="3"></textarea>
             </div>
 
             <!-- Додаткові поля для Юридичної допомоги -->
             <div id="legal-fields" class="additional-fields">
                 <label for="legal-issue">Опис юридичної проблеми:</label>
-                <textarea id="legal-issue" name="legal-issue" rows="3" ></textarea>
+                <textarea id="legal-issue" name="legal-issue" rows="3"></textarea>
             </div>
 
             <!-- Додаткові поля для Допомоги у працевлаштуванні -->
             <div id="employment-fields" class="additional-fields">
                 <label for="current-employment">Поточний статус зайнятості:</label>
-                <select id="current-employment" name="current-employment" >
+                <select id="current-employment" name="current-employment">
                     <option value="" disabled selected>Виберіть статус</option>
                     <option value="unemployed">Безробітний</option>
                     <option value="employed">Зайнятий</option>
@@ -132,13 +133,13 @@
                 </select>
 
                 <label for="desired-job">Бажана посада:</label>
-                <input type="text" id="desired-job" name="desired-job" >
+                <input type="text" id="desired-job" name="desired-job">
             </div>
 
             <!-- Додаткові поля для Освітніх та професійних програм -->
             <div id="education-fields" class="additional-fields">
                 <label for="current-education">Поточний рівень освіти:</label>
-                <select id="current-education" name="current-education" >
+                <select id="current-education" name="current-education">
                     <option value="" disabled selected>Виберіть рівень</option>
                     <option value="secondary">Середня освіта</option>
                     <option value="bachelor">Бакалавр</option>
@@ -147,22 +148,22 @@
                 </select>
 
                 <label for="desired-program">Бажана освітня або професійна програма:</label>
-                <input type="text" id="desired-program" name="desired-program" >
+                <input type="text" id="desired-program" name="desired-program">
             </div>
 
             <!-- Додаткові поля для Продуктів харчування та предметів першої необхідності -->
             <div id="food-fields" class="additional-fields">
                 <label for="food-items">Перелік необхідних продуктів та предметів:</label>
-                <textarea id="food-items" name="food-items" rows="3" ></textarea>
+                <textarea id="food-items" name="food-items" rows="3"></textarea>
             </div>
 
             <!-- Додаткові поля для Фінансової допомоги -->
             <div id="financial-fields" class="additional-fields">
                 <label for="financial-amount">Необхідна сума:</label>
-                <input type="number" id="financial-amount" name="financial-amount" min="1" >
+                <input type="number" id="financial-amount" name="financial-amount" min="1">
 
                 <label for="financial-purpose">Мета фінансової допомоги:</label>
-                <textarea id="financial-purpose" name="financial-purpose" rows="2" ></textarea>
+                <textarea id="financial-purpose" name="financial-purpose" rows="2"></textarea>
             </div>
 
             <button type="submit" class="save-btn">Подати запит</button>
@@ -190,8 +191,12 @@
         <div id="request-details-content">
             <!-- Деталі запиту будуть завантажуватися динамічно -->
         </div>
+        <button id="openChatBtn" class="open-chat-btn">
+            <i class="fas fa-comments"></i> Відкрити чат з волонтером
+        </button>
     </div>
 </div>
+
 
 <!-- Модальне вікно "Налаштування профілю біженця" -->
 <div id="profile-modal" class="modal">
@@ -240,7 +245,6 @@
 </div>
 
 
-
 <!-- Модальне вікно "Сповіщення" -->
 <div id="notifications-modal" class="modal">
     <div class="modal-content">
@@ -252,16 +256,59 @@
         </div>
     </div>
 </div>
+<div id="chatWrapper">
+
+
 
 <!-- Toast повідомлення -->
 <div id="toast" class="toast">
     <p id="toast-message"></p>
 </div>
 
+    <!-- Модальне вікно чату -->
+    <div id="chatModal" class="modal">
+        <div class="modal-content">
+            <div class="chat-header">
+                <div class="profile-info">
+                    <img src="/images/istockphoto-1298261537-612x612.jpg" alt="Profile Picture" class="profile-pic">
+                    <div>
+                        <h3>Re</h3>
+                        <p id="status" class="status online">Онлайн</p>
+                    </div>
+                </div>
+                <button class="close-btn chat-close-btn"><i class="fas fa-times"></i></button>
+            </div>
+            <div class="chat-body" id="chatBody">
+                <div class="message received">
+                    <p>Привіт, як справи?</p>
+                </div>
+                <div class="message sent">
+                    <p>Дякую :)</p>
+                </div>
+                <div class="message received">
+                    <p>Що щодо обіду?</p>
+                </div>
+                <div class="message sent">
+                    <p>Добре, до зустрічі.</p>
+                </div>
+            </div>
+            <div class="chat-footer">
+                <input type="text" id="messageInput" placeholder="Введіть повідомлення..." class="message-input">
+                <button id="sendBtn" class="send-btn"><i class="fas fa-paper-plane"></i></button>
+            </div>
+        </div>
+    </div>
+
+
 <!-- Підключення JavaScript -->
 <script src="/scripts/refugees.js"></script>
 <script src="/scripts/map.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnSRimv6X5mLrvhT2TT2w-mcP9eRkv6oo&callback=initMap"></script>
+<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js" integrity="sha256-nkP8cj5xaTdWK/BsZl+57ZCE/Y/i4UNtbNTpgH+6Taw=" crossorigin="anonymous"></script>
+
+<script src="/scripts/chat.js"></script>
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnSRimv6X5mLrvhT2TT2w-mcP9eRkv6oo&callback=initMap"></script>
 
 </body>
 </html>
