--- a/src/main/resources/static/volunteer.html
+++ b/src/main/resources/static/volunteer.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Особистий кабінет волонтера</title>
     <link rel="stylesheet" href="/templates/volunteers.css">
+    <link rel="stylesheet" href="/templates/chat.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -87,116 +88,168 @@
             <!-- Кнопка "Зберегти категорії" видалена -->
         </form>
     </section>
-
-    <!-- Модальне вікно "Запити на допомогу" -->
-    <div id="help-requests-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn help-requests-close-btn">&times;</span>
-            <h2>Запити на допомогу</h2>
-            <div class="requests-list" id="help-requests-list">
-                <!-- Список запитів буде завантажуватися динамічно за допомогою JavaScript -->
-            </div>
-        </div>
-    </div>
-
-    <!-- Модальне вікно "Мої активні запити" -->
-    <div id="my-active-requests-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn my-active-requests-close-btn">&times;</span>
-            <h2>Мої активні запити</h2>
-            <div class="my-requests-list" id="my-active-requests-list">
-                <!-- Список активних запитів буде завантажуватися динамічно -->
-            </div>
-        </div>
-    </div>
-
-    <!-- Модальне вікно з деталями запиту -->
-    <div id="request-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn request-close-btn">&times;</span>
-            <div class="request-details-container">
-                <h2>Деталі запиту</h2>
-                <div id="request-details">
-                    <!-- Деталі запиту будуть завантажуватися динамічно -->
-                </div>
-                <button id="accept-request-btn" class="accept-btn">Прийняти запит</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="profile-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn profile-close-btn">&times;</span>
-            <h2>Налаштування профілю</h2>
-            <form id="profile-form">
-                <div class="form-group">
-                    <label for="volunteer-first-name">Ім'я:</label>
-                    <input type="text" id="volunteer-first-name" name="volunteer-first-name" value="[Ім'я волонтера]" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="volunteer-last-name">Прізвище:</label>
-                    <input type="text" id="volunteer-last-name" name="volunteer-last-name" value="[Прізвище волонтера]" required>
-                </div>
-
-                <!-- Додане поле дати народження -->
-                <div class="form-group">
-                    <label for="volunteer-birth-date">Дата народження:</label>
-                    <input type="date" id="volunteer-birth-date" name="volunteer-birth-date" value="[Дата народження волонтера]" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="volunteer-phone">Телефон:</label>
-                    <input type="tel" id="volunteer-phone" name="volunteer-phone" value="[Телефон волонтера]" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="volunteer-skills">Навички та досвід:</label>
-                    <textarea id="volunteer-skills" name="volunteer-skills" rows="4" required>[Навички та досвід волонтера]</textarea>
-                </div>
-
-                <div class="form-group">
-                    <label for="volunteer-city">Місто:</label>
-                    <input type="text" id="volunteer-city" name="volunteer-city" value="[Місто волонтера]" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="volunteer-country">Країна:</label>
-                    <input type="text" id="volunteer-country" name="volunteer-country" value="[Країна волонтера]" required>
-                </div>
-
-                <button type="submit" class="save-btn">Зберегти зміни</button>
-            </form>
-        </div>
-    </div>
-
-
-    <!-- Модальне вікно "Сповіщення" -->
-    <div id="notifications-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn notifications-close-btn">&times;</span>
-            <h2>Сповіщення</h2>
-            <div id="notifications-list">
-                <!-- Список сповіщень буде завантажуватися динамічно -->
-                <p>Наразі у вас немає нових сповіщень.</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Toast повідомлення -->
-    <div id="toast" class="toast">
-        <p id="toast-message"></p>
-    </div>
 </main>
+
+<!-- Всі модальні вікна повинні бути розміщені тут, поза основним контентом -->
+
+<!-- Модальне вікно "Запити на допомогу" -->
+<div id="help-requests-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn help-requests-close-btn">&times;</span>
+        <h2>Запити на допомогу</h2>
+        <div class="requests-list" id="help-requests-list">
+            <!-- Список запитів буде завантажуватися динамічно за допомогою JavaScript -->
+        </div>
+    </div>
+</div>
+
+<!-- Модальне вікно "Мої активні запити" -->
+<div id="my-active-requests-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn my-active-requests-close-btn">&times;</span>
+        <h2>Мої активні запити</h2>
+        <div class="my-requests-list" id="my-active-requests-list">
+            <!-- Список активних запитів буде завантажуватися динамічно -->
+        </div>
+    </div>
+</div>
+
+<!-- Модальне вікно з деталями запиту -->
+<div id="request-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn request-close-btn">&times;</span>
+        <div class="request-details-container">
+            <h2>Деталі запиту</h2>
+            <div id="request-details">
+                <!-- Деталі запиту будуть завантажуватися динамічно -->
+            </div>
+            <button id="accept-request-btn" class="accept-btn">Прийняти запит</button>
+            <button id="openChatBtn" class="open-chat-btn">
+                <i class="fas fa-comments"></i> Відкрити чат з волонтером
+            </button>
+        </div>
+    </div>
+</div>
+
+<!-- Модальне вікно "Налаштування профілю" -->
+<div id="profile-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn profile-close-btn">&times;</span>
+        <h2>Налаштування профілю</h2>
+        <form id="profile-form">
+            <div class="form-group">
+                <label for="volunteer-first-name">Ім'я:</label>
+                <input type="text" id="volunteer-first-name" name="volunteer-first-name"
+                       value="[Ім'я волонтера]" required>
+            </div>
+
+            <div class="form-group">
+                <label for="volunteer-last-name">Прізвище:</label>
+                <input type="text" id="volunteer-last-name" name="volunteer-last-name"
+                       value="[Прізвище волонтера]" required>
+            </div>
+
+            <!-- Додане поле дати народження -->
+            <div class="form-group">
+                <label for="volunteer-birth-date">Дата народження:</label>
+                <input type="date" id="volunteer-birth-date" name="volunteer-birth-date"
+                       value="[Дата народження волонтера]" required>
+            </div>
+
+            <div class="form-group">
+                <label for="volunteer-phone">Телефон:</label>
+                <input type="tel" id="volunteer-phone" name="volunteer-phone" value="[Телефон волонтера]"
+                       required>
+            </div>
+
+            <div class="form-group">
+                <label for="volunteer-skills">Навички та досвід:</label>
+                <textarea id="volunteer-skills" name="volunteer-skills" rows="4" required>[Навички та досвід волонтера]</textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="volunteer-city">Місто:</label>
+                <input type="text" id="volunteer-city" name="volunteer-city" value="[Місто волонтера]" required>
+            </div>
+
+            <div class="form-group">
+                <label for="volunteer-country">Країна:</label>
+                <input type="text" id="volunteer-country" name="volunteer-country" value="[Країна волонтера]"
+                       required>
+            </div>
+
+            <button type="submit" class="save-btn">Зберегти зміни</button>
+        </form>
+    </div>
+</div>
+
+<!-- Модальне вікно "Сповіщення" -->
+<div id="notifications-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn notifications-close-btn">&times;</span>
+        <h2>Сповіщення</h2>
+        <div id="notifications-list">
+            <!-- Список сповіщень буде завантажуватися динамічно -->
+            <p>Наразі у вас немає нових сповіщень.</p>
+        </div>
+    </div>
+</div>
+
+<!-- Модальне вікно чату -->
+<div id="chatModal" class="modal">
+    <div class="modal-content">
+        <div class="chat-header">
+            <div class="profile-info">
+                <img src="/images/istockphoto-1298261537-612x612.jpg" alt="Profile Picture" class="profile-pic">
+                <div>
+                    <h3>Re</h3>
+                    <p id="status" class="status online">Онлайн</p>
+                </div>
+            </div>
+            <button class="close-btn chat-close-btn"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="chat-body" id="chatBody">
+            <div class="message received">
+                <p>Привіт, як справи?</p>
+            </div>
+            <div class="message sent">
+                <p>Дякую :)</p>
+            </div>
+            <div class="message received">
+                <p>Що щодо обіду?</p>
+            </div>
+            <div class="message sent">
+                <p>Добре, до зустрічі.</p>
+            </div>
+        </div>
+        <div class="chat-footer">
+            <input type="text" id="messageInput" placeholder="Введіть повідомлення..." class="message-input">
+            <button id="sendBtn" class="send-btn"><i class="fas fa-paper-plane"></i></button>
+        </div>
+    </div>
+</div>
+
+<!-- Toast повідомлення -->
+<div id="toast" class="toast">
+    <p id="toast-message"></p>
+</div>
 
 <!-- Футер -->
 <footer>
     <p>&copy; 2024 Портал допомоги біженцям. Всі права захищені.</p>
 </footer>
 
+<!-- Підключення модального вікна чату -->
+<div id="chat-container">
+    <!-- Вміст чату буде завантажений сюди -->
+</div>
+
 <!-- Підключення JavaScript -->
 <!-- volunteerFetch.js підключений перед volunteers.js -->
 <script src="/scripts/volunteerFetch.js"></script>
 <script src="/scripts/volunteers.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js" integrity="sha256-nkP8cj5xaTdWK/BsZl+57ZCE/Y/i4UNtbNTpgH+6Taw=" crossorigin="anonymous"></script>
+<script src="/scripts/chat.js"></script>
 </body>
 </html>
